<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">Username</string>
    <string name="new_username">New Username</string>
    <string name="new_password">New Password</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account">Create a new account</string>
    <string name="logout">Logout</string>
    <string name="take">Take Pic</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="send">Send</string>
    <string name="comment">Comment</string>
    <string name="likes">Likes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>