<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ComposeFragment">

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="20dp"
        android:text="@string/take" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@+id/btnCaptureImage"
        android:layout_alignParentBottom="true"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCaptureImage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text"
        android:imeOptions="actionNext"/>

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        tools:srcCompat="@tools:sample/avatars" />
</RelativeLayout>