<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="450dp"
    android:minWidth="1000dp"
    tools:context=".SignupFragment">


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivCursiveLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:ems="10"
        android:hint="@string/new_username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/sign_up" />

    <ImageView
        android:id="@+id/ivCursiveLogo"
        android:layout_width="242dp"
        android:layout_height="107dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="45dp"
        android:src="?attr/cursiveLogo" />

</RelativeLayout>